--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/Style.css" />
-    <title>Dog House</title>
+    <title>Dog Veterinary</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" id="top_nav">
